# ProcesamientoIm-genes

./: .gitignore  README.md
Camara o imagen /test/: CMakeLists.txt  main.cpp
Camara o imagen /test/include/: camara.h  imagen.h
Camara o imagen /test/src/: camara.cpp  imagen.cpp
Convex_Hull/: CMakeLists.txt  README.md  main.cpp
Convex_Hull/include/: hull.h
Convex_Hull/polygons/: CMakeLists.txt  main.cpp
Convex_Hull/polygons/include/: hull.h
Convex_Hull/polygons/src/: hull.cpp
Convex_Hull/src/: hull.cpp
Frame_Differencing/: CMakeLists.txt  main.cpp
Frame_Differencing & Running Average/include/: Camera.h  RunningAverage.h
Frame_Differencing/include/: FrameDifferencing.h
Frame_Differencing/src/: Camera.cpp  FrameDifferencing.cpp  RunningAverage.cpp
Imagen_satelital/: CMakeLists.txt  Reporte_Taller_Procesamiento_Gaussiano.html  main.cpp
Imagen_satelital/cmake-build/: satellite
Imagen_satelital/include/: processor.h
Imagen_satelital/src/: processor.cpp
Presentaciones/: main.tex  proyectoACM.sty
Taller(segmentacion_de_rostros)/include/: frame_diff.h  gmm_segmenter.h
Taller(segmentacion_de_rostros)/src/: frame_diff.cpp  gmm_segmenter.cpp  main_frame_diff.cpp  main_gmm.cpp
Taller_Color/: .gitignore  README.md
Taller_Color/Ej_1/: CMakeLists.txt
Taller_Color/Ej_1/include/converters/: ColorConverter.h
Taller_Color/Ej_1/include/io/: ImageIO.h
Taller_Color/Ej_2/: main.cpp
Taller_Color/Ej_3/: main.cpp
Taller_Color/Ej_4/: main.cpp
Taller_Color/Ej_6/: main.cpp
Taller_Color/Ej_7/: CMakeLists.txt  main.cpp
Taller_segmentacion_de_rostros/: CMakeLists.txt
converter/include/: App.h
converter/include/io/: CameraStream.h
converter/src/: App.cpp
converter/src/converters/: ColorConverter.cpp
converter/src/io/: CameraStream.cpp  ImageIO.cpp
filtros/: CMakeLists.txt  README.md  main.cpp
